--- a/core-base-libr/build.gradle
+++ b/core-base-libr/build.gradle
@@ -12,7 +12,7 @@ android {
         versionName "1.0"
         multiDexEnabled true
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
 
         sourceSets {
@@ -47,16 +47,16 @@ dependencies {
     //implementation project(':lib-common')
 
     // Android Support
-    implementation "com.android.support:design:$rootProject.ext.supportVersion"
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportVersion"
-    implementation "com.android.support:cardview-v7:$rootProject.ext.supportVersion"
-    implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportVersion"
-    implementation "com.android.support:exifinterface:$rootProject.ext.supportVersion"
-    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.exifinterface:exifinterface:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //api "com.android.support:multidex:1.0.3"
 
     // RxJava
-    api('io.reactivex.rxjava2:rxjava:2.2.8') {
+    api('io.reactivex.rxjava2:rxjava:2.2.12') {
         exclude group: 'io.reactvex'
     }
     api('io.reactivex.rxjava2:rxandroid:2.1.1') {
@@ -126,4 +126,5 @@ dependencies {
     api 'me.jessyan:autosize:1.2.1' //1.1.2
 
     implementation 'com.github.nanchen2251:CompressHelper:1.0.5'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 }
