--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:theme="@style/AppTheme">
 
         <!--引入今日头条AndroidAutoSize全屏适配方案-->
-<!--        <meta-data-->
-<!--            android:name="design_width_in_dp"-->
-<!--            android:value="360"/>-->
-<!--        <meta-data-->
-<!--            android:name="design_height_in_dp"-->
-<!--            android:value="640"/>-->
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="360"/>
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="640"/>
 
         <activity android:name=".MainActivity">
             <intent-filter>
